Can you update the same on Amazon as well? Spacing in body headings. look and feel change. overflow fix for angular material Data. Can you change the Name to remove the "M" from the last name. The color change when mouse over on the drop down Menu from "My profile" Change the message to  "Your data was updated successfully" Please use the attached pic for the background. The word "healthcare" needs to have a space between health and care. Change Spent to Spend Remove periods from the end.

--- a/mockup/custom_default.css
+++ b/mockup/custom_default.css
@@ -81,7 +81,7 @@ table {
 }
 
 html {
-  /*overflow-y: auto;*/
+  overflow-y: scroll;
   box-sizing: border-box;
 }
 
@@ -133,7 +133,7 @@ body {
 	height: 100%;
 	min-width: 999px;
 	background-color: #fff;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
 	/*letter-spacing: 1px;*/
 }
 
@@ -231,10 +231,11 @@ body {
 	line-height: 20px;
 	/*width: 100%;*/
 }
-.container ul.topnav > li ul li a:hover {/*background:none;*/
+.container ul.topnav > li ul li:hover {/*background:none;*/
 	/*float: left;
 	padding: 3px 0 3px 10px !important;*/
 	font-weight: 100;
+	background-color: #29699d ;
 }
 /* Top Main Navigation Ends  */
 
@@ -778,6 +779,8 @@ body {
 .testheading{
     font-size: 14px;
     font-weight: 600;
+    display: inline-table;
+    margin: 2px 0;
     /*opacity: 0.8;*/
 }
 /*--------------Angular matarial----------*/
